# sqlite3_windows_dll

./: .gitignore  .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc
example/windows/runner/: Runner.rc  main.cpp
lib/: sqlite3_windows_dll.dart
test/: sqlite3_windows_dll_test.dart
windows/: CMakeLists.txt  sqlite3_windows_dll_plugin.cpp
windows/include/sqlite3_windows_dll/: sqlite3_windows_dll_plugin.h
